fdo#34305 fix missing jpg/gif in docx import